# AlBDO-v-0.1.0

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EnvVarUpdate.nsh  LICENSE.md  README.md  add_path.ps1  grep2.ps1  grep_dev.ps1  installer.nsi
.github/: CODEOWNERS
.github/workflows/: albedo-node-release.yml  ci.yml  release-binaries-main.yml
Docs/: Albedo_Architecture_Dry_Run.md  Albedo_Development_Plan.md  Architecture.md  Developer_Contract.md  Gaps_within_the_project.md  Post Dev Plan.md  Project_analysis.md  Things_we_need_to_tackle#1.md
assets/: albedo-hydration.js  albedo-runtime.js  albedo-wt-bootstrap.js
benchmarks/: README.md  baseline.json  workloads.json
crates/albedo-node/: Cargo.toml  README.md  albedo-node-0.1.0.tgz  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  typed.d.ts
crates/albedo-server/: Cargo.toml  README.md
src/: adaptive.rs  analyzer.rs  dev_contract.rs  effects.rs  estimator.rs  graph.rs  incremental.rs  ir.rs  lib.rs  parallel_topo.rs  parser.rs  scanner.rs  showcase.rs  topological.rs  types.rs
src/bundler/: classify.rs  emit.rs  mod.rs  plan.rs  precompiled.rs  rewrite.rs  static_slice.rs  vendor.rs
src/hydration/: mod.rs  payload.rs  plan.rs  script.rs
src/manifest/: builder.rs  mod.rs  schema.rs
src/runtime/: ast_eval.rs  engine.rs  highway.rs  hot_set.rs  mod.rs  pi_arch.rs  pipeline.rs  renderer.rs  (+4 more)
tests/: bundler_emit_integration_tests.rs  hydration_integration_tests.rs  incremental_tests.rs  phase0_golden_correctness_tests.rs  production_cache_tests.rs  visual_runtime_tests.rs
(+51 files in other folders)
